[package]
name = "ethereum-interfaces"
version = "0.1.0"
authors = ["battlmonstr <battlmonstr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3"
ethereum-types = { version = "0.11", default-features = false }
prost = "0.7"
tonic = "0.4"
